# freeeeg128

./: .gitignore  COMPARISON.md  ENCLOSURE.md  HARDWARE.md  HISTORY.md  LICENSE  PERIPHERALS.md  README.md  REFERENCES.md  ROADMAP.md
host/: Makefile  README.md  pyproject.toml
host/bench/: __init__.py  bench_brainflow.py  bench_eegexpy.py  bench_lsl.py  bench_mne.py  bench_python.py
host/freeeeg128/: __init__.py  dashboard.py  lsl_bridge.py  protocol.py  quality.py  recorder.py  replay.py  serial_source.py  synthetic.py
host/scripts/: bom_to_jlcpcb.py  install_pi.sh  p0_diagnose.sh  p0_diagnose_linux.sh  p0_sniff.py  pipeline_smoketest.sh  pos_to_jlcpcb.py  record_session.py  run_all_bench.sh  run_dashboard.py  synth_to_lsl.py
host/tests/: test_protocol.py  test_quality.py  test_sources.py
paper/: Makefile  paper.Rnw  refs.bib
pcb/: CHANGES-beta.md  FAB-SUBMISSION.md  README.md
pcb/kicad/: ACCEL&GYRO.kicad_sch  ADC10_ads131.kicad_sch  ADC11_ads131.kicad_sch  ADC12_ads131.kicad_sch  ADC13_ads131.kicad_sch  ADC14_ads131.kicad_sch  ADC15_ads131.kicad_sch  ADC16_ads131.kicad_sch  ADC1_ads131.kicad_sch  ADC2_ads131.kicad_sch  ADC3_ads131.kicad_sch  ADC4_ads131.kicad_sch  ADC5_ads131.kicad_sch  ADC6_ads131.kicad_sch  ADC7_ads131.kicad_sch  ADC8_ads131.kicad_sch  ADC9_ads131.kicad_sch  AVDD.kicad_sch  CRYSTAL.kicad_sch  FreeEEG128-alpha.kicad_pcb  FreeEEG128-alpha.kicad_prl  FreeEEG128-alpha.kicad_sch  IOVDD.kicad_sch  ISO1.kicad_sch  ISO_SPI.kicad_sch  ISO_UART.kicad_sch  ISO_USB.kicad_sch  MCU.kicad_sch  POWER.kicad_sch  REF.kicad_sch  SD.kicad_sch  VDD.kicad_sch  (+4 more)
(+2 files in other folders)
