[project]
name = "freeeeg128-host"
version = "0.0.1"
description = "Host-side Python stack for the FreeEEG128 acquisition board"
readme = "README.md"
license = { text = "AGPL-3.0" }
authors = [{ name = "Morgan Hough", email = "morgan.hough@gmail.com" }]
requires-python = ">=3.11"

dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pylsl>=1.16",
  "brainflow>=5.14",
  "mne>=1.8",
  "pyserial>=3.5",
  "fastapi>=0.115",
  "uvicorn>=0.32",
]

[project.optional-dependencies]
eegexpy = ["eeg-expy>=0.1.0"]
bids = ["mne-bids>=0.15"]
dev = ["pytest>=8", "ruff>=0.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
